--- a/intro_to_opencv_I.ipynb
+++ b/intro_to_opencv_I.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Goal\n",
+        "**Goal**\n",
         "\n",
         "Learn to:\n",
         "\n",
