--- a/imageprocessingbasics/IntroOpenCV.ipynb
+++ b/imageprocessingbasics/IntroOpenCV.ipynb
@@ -3,12 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "IntroOpenCV.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRN0t4eVokHzxEja2bJ5SW",
+      "authorship_tag": "ABX9TyMDYdNyhvTD5WhBRFE/m7xz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +42,7 @@
         "*   **Numpy**, for handling multidimensional arrays (like images): https://numpy.org/\n",
         "*   **Matplotlib**, library for visualization in python: https://matplotlib.org/\n",
         "\n",
-        "We will use the 3.x version of OpenCV’s API. We will intensively refer to the documentation (https://opencv-python-tutroals.readthedocs.io/en/latest/index.html)\n",
+        "We will use the 3.x version of OpenCV’s API. We will intensively refer to the documentation (https://docs.opencv.org/4.11.0/d6/d00/tutorial_py_root.html)\n",
         "\n",
         "We will create here a first Computer Vision program using OpenCV. OpenCV is a third-party library, independent of ROS (although the development teams of both are related).\n",
         "\n",
@@ -87,7 +85,7 @@
         "id": "3sXvFic4NM06"
       },
       "source": [
-        "#We use the library scikit to read images from url \n",
+        "#We use the library scikit to read images from url\n",
         "#In OpenCV, the function to read from file is cv2.imread\n",
         "from skimage import io\n",
         "\n",
@@ -109,7 +107,7 @@
       "source": [
         "Remember that the basic data type that we will use from OpenCV are **numpy** arrays, which represents a multi-dimensional matrix.\n",
         "\n",
-        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_core/py_basic_ops/py_basic_ops.html#basic-ops \n"
+        "* https://docs.opencv.org/4.11.0/d3/df2/tutorial_py_basic_ops.html\n"
       ]
     },
     {
@@ -126,7 +124,7 @@
         "print(\"Pixel type: \", im.dtype)\n",
         "\n",
         "#Accesing individual pixels (not efficient):\n",
-        "print(\"RGB Color of pixel at row 200, col 100: \", im[200,100])\n",
+        "print(\"RGB Color of pixel at row 200, col 100: \", im[100,100])\n",
         "print(\"Blue field for that pixel: \", im[200,100,2])\n"
       ],
       "execution_count": null,
@@ -139,7 +137,7 @@
       },
       "source": [
         "# Basic color operations\n",
-        "The color images are represented by matrixes with 3 dimensions, in which the third dimension stores the color channel. \n",
+        "The color images are represented by matrixes with 3 dimensions, in which the third dimension stores the color channel.\n",
         "\n",
         "\n"
       ]
@@ -183,7 +181,7 @@
         "Also, we will work sometimes with greyscale images and with binary images.\n",
         "\n",
         "*   Changing colour spaces in OpenCV:\n",
-        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_colorspaces/py_colorspaces.html\n",
+        "  * https://docs.opencv.org/4.11.0/df/d9d/tutorial_py_colorspaces.html\n",
         "* HSV color space:\n",
         "  * https://en.wikipedia.org/wiki/HSL_and_HSV"
       ]
@@ -194,7 +192,7 @@
         "id": "vnIdPLhjYEgi"
       },
       "source": [
-        "#Convert to Grayscale image \n",
+        "#Convert to Grayscale image\n",
         "im_gray = cv2.cvtColor(im, cv2.COLOR_RGB2GRAY)\n",
         "plt.imshow(im_gray,cmap=plt.cm.gray)\n",
         "\n",
@@ -253,7 +251,7 @@
         "\n",
         "*   Thresholding\n",
         "  * http://docs.opencv.org/modules/imgproc/doc/miscellaneous_transformations.html#threshold\n",
-        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_thresholding/py_thresholding.html \n",
+        "  * https://docs.opencv.org/4.11.0/d7/d4d/tutorial_py_thresholding.html\n",
         "\n",
         "**TODO**: Play with the value of the threshold, currently at 150"
       ]
@@ -269,8 +267,8 @@
         "\n",
         "\n",
         "print(\"Pixel value:\", thresh1[200,100])\n",
-        "\t\n",
-        "plt.figure()  \n",
+        "\n",
+        "plt.figure()\n",
         "plt.imshow(thresh1,plt.cm.gray)\n",
         "plt.title('Green Thresholded')\n",
         "\n",
@@ -306,7 +304,7 @@
         "\n",
         "\n",
         "*   Arithmetic and bit-wise operations\n",
-        "    *   https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_core/py_image_arithmetics/py_image_arithmetics.html\n",
+        "    *   https://docs.opencv.org/4.11.0/d0/d86/tutorial_py_image_arithmetics.html\n",
         "\n",
         "Furthermore, many operations in OpenCV can be **masked**. This is, a binary image is used as a mask, and the operation is only carried out in those pixels that are white in the mask.\n",
         "\n",
@@ -321,13 +319,13 @@
       "source": [
         "#Binary bit-wise operations\n",
         "mask_inv = cv2.bitwise_not(thresh1)\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(mask_inv,plt.cm.gray)\n",
         "plt.title('Binary Inverted')\n",
         "\n",
         "# Now black-out the area of croma\n",
         "img1_fg = cv2.bitwise_and(im,im,mask=mask_inv)\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(img1_fg)\n"
       ],
       "execution_count": null,
@@ -350,13 +348,13 @@
       "source": [
         "bg = io.imread('https://robotics.upo.es/~lmercab/rva/background.jpg')\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(bg)\n",
         "\n",
         "img2_bg = cv2.bitwise_and(bg,bg,mask = thresh1)\n",
         "\n",
         "result = cv2.add(img1_fg,img2_bg)\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(result)"
       ],
       "execution_count": null,
@@ -375,7 +373,7 @@
         "For binary images, two common operations are **erosion** and **dilation**. See the material in the slides for more information:\n",
         "\n",
         "* Erosion and dilation:\n",
-        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html#morphological-ops\n",
+        "  * https://docs.opencv.org/4.11.0/d9/d61/tutorial_py_morphological_ops.html\n",
         "\n",
         "**TODO**: Play with the **kernel size** and the **iterations** in the operations"
       ]
@@ -386,7 +384,7 @@
         "id": "iq2MPasNpPWl"
       },
       "source": [
-        "#Erosion and dilation \n",
+        "#Erosion and dilation\n",
         "kernel = np.ones((5,5),np.uint8)\n",
         "\n",
         "thresh2_eroded = cv2.erode(thresh2,kernel,iterations = 1)\n",
@@ -418,7 +416,7 @@
       },
       "source": [
         "# Homework #1: A First Program using OpenCV\n",
-        "The objective of the first program is to implement a simple **CHROMA KEY** application. \n",
+        "The objective of the first program is to implement a simple **CHROMA KEY** application.\n",
         "\n",
         "The main idea of a CHROMA is to eliminate a given colour from the image and substitute it by a different background (see Figure). Typically the green colour is used for the chroma, but other options exist.\n",
         "\n",
