--- a/imageprocessingbasics/filtering.ipynb
+++ b/imageprocessingbasics/filtering.ipynb
@@ -3,12 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "filtering.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+/tTCdv4JA8aRyFPFBxdH",
+      "authorship_tag": "ABX9TyM3CNLBE2Tz7XmCAp3tKsvG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +42,7 @@
         "*   **Numpy**, for handling multidimensional arrays (like images): https://numpy.org/\n",
         "*   **Matplotlib**, library for visualization in python: https://matplotlib.org/\n",
         "\n",
-        "We will use the 3.x version of OpenCV’s API. We will intensively refer to the documentation (https://opencv-python-tutroals.readthedocs.io/en/latest/index.html)\n",
+        "We will use the 4.x version of OpenCV’s API. We will intensively refer to the documentation (https://docs.opencv.org/4.11.0/d6/d00/tutorial_py_root.html)\n",
         "\n",
         "We analyze the **linear filtering** operations in OpenCV and use them to extract features of interest like borders.\n",
         "\n"
@@ -67,7 +65,7 @@
         "from matplotlib import pyplot as plt\n",
         "from matplotlib import cm\n",
         "\n",
-        "#We use the library scikit to read images from url \n",
+        "#We use the library scikit to read images from url\n",
         "#In OpenCV, the function to read from file is cv2.imread\n",
         "from skimage import io"
       ],
@@ -81,12 +79,12 @@
       },
       "source": [
         "\n",
-        "As seen in the slides, one very common region-based operation is filtering. \n",
+        "As seen in the slides, one very common region-based operation is filtering.\n",
         "\n",
         "Linear filters operate by convolving a **kernel** with the image.\n",
         "\n",
-        "* 2D linear filters, convolutions: \n",
-        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html\n",
+        "* 2D linear filters, convolutions:\n",
+        "  * https://docs.opencv.org/4.11.0/d4/d13/tutorial_py_filtering.html\n",
         "\n"
       ]
     },
@@ -98,7 +96,7 @@
       "source": [
         "im = io.imread('https://robotics.upo.es/~lmercab/rva/background.jpg')\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(im)\n",
         "\n"
       ],
@@ -137,7 +135,7 @@
         "gaussKernel=np.zeros(shape=(k,k))\n",
         "\n",
         "#Apply the Gaussian 'bell' equation (see above) to determine the value of element\n",
-        "#of the kernel. \n",
+        "#of the kernel.\n",
         "for i in range(k):\n",
         "  for j in range(k):\n",
         "    gaussKernel[i,j] = np.exp(-((i-(k-1)/2)**2+(j-(k-1)/2)**2)/(2*(sigma**2)))\n",
@@ -233,7 +231,7 @@
         "\t\t\t\t[0,1,0],\n",
         "\t\t\t\t[0,0,0]],np.float32)\n",
         "\n",
-        "\t\n",
+        "\n",
         "print(average_kernel)\n",
         "print(delta_kernel)\n",
         "\n",
@@ -291,7 +289,7 @@
         "#Type of pixels\n",
         "print(h_edges.dtype)\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(h_edges,cmap=plt.cm.gray)\n",
         "plt.title('Filtered')"
       ],
@@ -318,7 +316,7 @@
       "source": [
         "#The problem with the former case is that, as the output is uint8, negative numbers\n",
         "#are truncated to 0. That is edges from bright to dark do not appear\n",
-        "#Alternatively, we can store the output as floats\t\n",
+        "#Alternatively, we can store the output as floats\n",
         "h_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,filter_kernel)\n",
         "\n",
         "#Type of pixels\n",
@@ -328,7 +326,7 @@
         "abs_h_edges64f = np.absolute(h_edges_2)\n",
         "\n",
         "#Check the difference\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
         "plt.title('Filtered with Sobel Kernel')"
       ],
@@ -341,7 +339,7 @@
         "id": "gCOLaekmSFKR"
       },
       "source": [
-        "Another **important point**: The Sobel kernel can give high values in noisy regions. Thus, the derivative is typically applied to smoothed images, that eliminate part of the noise, leading to cleaner edge responses. \n",
+        "Another **important point**: The Sobel kernel can give high values in noisy regions. Thus, the derivative is typically applied to smoothed images, that eliminate part of the noise, leading to cleaner edge responses.\n",
         "\n",
         "**TODO**: Check the difference, and play with the Gaussian kernel above to change different values of $\\sigma$. We will relate this to the concept of *scale* in future lessons.\n"
       ]
@@ -358,11 +356,11 @@
         "abs_h_edges64f_blurred = np.absolute(h_edges_blurred)\n",
         "\n",
         "#Check the difference\n",
-        "plt.figure(figsize=(14,14)) \n",
-        "plt.subplot(1,2,1) \n",
+        "plt.figure(figsize=(14,14))\n",
+        "plt.subplot(1,2,1)\n",
         "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
         "plt.title('Filtered with Sobel Kernel')\n",
-        "plt.subplot(1,2,2) \n",
+        "plt.subplot(1,2,2)\n",
         "plt.imshow(abs_h_edges64f_blurred,cmap=plt.cm.gray)\n",
         "plt.title('Filtered with Gaussian and then Sobel Kernel')"
       ],
@@ -388,7 +386,7 @@
         "v_edges_2_blurred = cv2.filter2D(blurred_image[:,:,0],cv2.CV_64F,np.transpose(filter_kernel))\n",
         "abs_v_edges64f_blurred = np.absolute(v_edges_2_blurred)\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(abs_v_edges64f_blurred,cmap=plt.cm.gray)\n",
         "plt.title('Vertical edges kernel')\n"
       ],
@@ -416,7 +414,7 @@
         "#with the response of both filters (in this case, the absolute value)\n",
         "abs_edges_64f = abs_v_edges64f_blurred + abs_h_edges64f_blurred\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(abs_edges_64f,cmap=plt.cm.gray)\n",
         "plt.title('Edge response')\n",
         "\n",
@@ -431,7 +429,7 @@
         "#kernel = np.ones((3,3))\n",
         "#binary_edges = cv2.erode(binary_edges,kernel)\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(binary_edges,cmap=plt.cm.gray)\n",
         "plt.title('Binarized edges ')\n",
         "\n",
@@ -452,15 +450,15 @@
         "\n",
         "Given a binary image with objects of interest, we can extract their contours using the OpenCV function `findContours`\n",
         "\n",
-        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html\n",
+        "* https://docs.opencv.org/4.11.0/d3/d05/tutorial_py_table_of_contents_contours.html\n",
         "\n",
         "The function returns a Python list with the countours of all elements in the binary image. Each contour is an array with the pixel coordinates of the points in the contour. The function offers multiple options for dealing with contours. There are **two important parameters**:\n",
         "\n",
         "* **Mode**: how the contours are organized. For instance:\n",
-        " * `CV_RETR_EXTERNAL` retrieves only the extreme outer contours. \n",
+        " * `CV_RETR_EXTERNAL` retrieves only the extreme outer contours.\n",
         " * `CV_RETR_LIST`: retrieves all of the contours without establishing any hierarchical relationships\n",
         "* **Method**: how the contour is extracted. For instance:\n",
-        " * `CV_CHAIN_APPROX_NONE` stores absolutely all the contour points. \n",
+        " * `CV_CHAIN_APPROX_NONE` stores absolutely all the contour points.\n",
         " * `CV_CHAIN_APPROX_SIMPLE` compresses horizontal, vertical, and diagonal segments and leaves only their end points.\n",
         "\n",
         "\n"
@@ -483,14 +481,14 @@
         "print(len(contours))\n",
         "\n",
         "#Make a copy of the original image to draw over it\n",
-        "#This is important. Assignments (A = B) in numpy arrays does not create \n",
+        "#This is important. Assignments (A = B) in numpy arrays does not create\n",
         "#a new array, but a new reference to the same allocated data\n",
         "im_draw = im.copy()\n",
         "\n",
         "#We can draw the contours over the image\n",
         "cv2.drawContours(im_draw, contours, -1, (255, 0, 0), 2 )\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(im_draw)\n",
         "plt.title('Extracted contours ')"
       ],
@@ -505,7 +503,7 @@
       "source": [
         "With the contours, then we can do many things. You can compute contour features like length, area, etc:\n",
         "\n",
-        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_contour_features/py_contour_features.html\n",
+        "* https://docs.opencv.org/4.11.0/dd/d49/tutorial_py_contour_features.html\n",
         "\n",
         "In the following example, we look for rectangles in the image\n",
         "(adapted from opencv_source/samples/python2/squares.py)"
@@ -517,7 +515,7 @@
         "id": "atHLouxK4nPB"
       },
       "source": [
-        "#Function that computes the (absolute value of the) cosine of the angle formed \n",
+        "#Function that computes the (absolute value of the) cosine of the angle formed\n",
         "#by 3 consecutive vertices\n",
         "def angle_cos(p0, p1, p2):\n",
         "    d1, d2 = (p0-p1).astype('float'), (p2-p1).astype('float')\n",
@@ -548,7 +546,7 @@
         "#Draw resultant contours\n",
         "cv2.drawContours(im_draw, squares, -1, (0, 255, 0), 3 )\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(im_draw)\n",
         "plt.title('Extracted squares ')"
       ],
@@ -575,7 +573,7 @@
         "#Target image\n",
         "hm2 = io.imread('https://robotics.upo.es/~lmercab/rva/aruco.jpg')\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(hm2)"
       ],
       "execution_count": null,
@@ -601,7 +599,7 @@
         "#Target image\n",
         "hm2 = io.imread('https://robotics.upo.es/~lmercab/rva/doble-ceda.jpg')\n",
         "\n",
-        "plt.figure()  \n",
+        "plt.figure()\n",
         "plt.imshow(hm2)"
       ],
       "execution_count": null,
