--- a/imageprocessingbasics/templatematching.ipynb
+++ b/imageprocessingbasics/templatematching.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "templatematching.ipynb",
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5lusGV90rQs7uihFEplUX",
+      "authorship_tag": "ABX9TyOJ/NGgKSwM8bBuZY6atRX/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +42,7 @@
         "*   **Numpy**, for handling multidimensional arrays (like images): https://numpy.org/\n",
         "*   **Matplotlib**, library for visualization in python: https://matplotlib.org/\n",
         "\n",
-        "We will use the 3.x version of OpenCV’s API. We will intensively refer to the documentation (https://opencv-python-tutroals.readthedocs.io/en/latest/index.html)"
+        "We will use the 4.x version of OpenCV’s API. We will intensively refer to the documentation (https://docs.opencv.org/4.11.0/d6/d00/tutorial_py_root.html)"
       ]
     },
     {
@@ -62,7 +61,7 @@
         "#We use matplotlib for generating plots\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
-        "#We use the library scikit to read images from url \n",
+        "#We use the library scikit to read images from url\n",
         "#In OpenCV, the function to read from file is cv2.imread\n",
         "from skimage import io"
       ],
@@ -75,7 +74,7 @@
         "id": "MH7NRx_MolEd"
       },
       "source": [
-        "One function that we have seen in theory is **template matching**. \n",
+        "One function that we have seen in theory is **template matching**.\n",
         "\n",
         "The objective is to look for a template on an image, and\n",
         "determine the most likely location of the template.\n",
@@ -140,7 +139,7 @@
         "*   http://docs.opencv.org/modules/imgproc/doc/object_detection.html?highlight=matchtemplate#matchtemplate\n",
         "\n",
         "\n",
-        "This function returns in result a **similarity map**, in the form of an image. The maximum of this map will indicate where is the pattern located. \n",
+        "This function returns in result a **similarity map**, in the form of an image. The maximum of this map will indicate where is the pattern located.\n",
         "\n"
       ]
     },
@@ -203,7 +202,7 @@
       "source": [
         "OpenCV has several functions to draw on the images. They are quite useful for debugging and to show results.\n",
         "\n",
-        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_gui/py_drawing_functions/py_drawing_functions.html#drawing-functions\n",
+        "* https://docs.opencv.org/4.11.0/dc/da5/tutorial_py_drawing_functions.html\n",
         "\n",
         "For instance:\n",
         "\n",
@@ -219,7 +218,7 @@
         "cv2.rectangle(img, upperleftpoint, lowerrightpoint, color, thickness)\n",
         "```\n",
         "\n",
-        "We use them next to show  the result of the former steps "
+        "We use them next to show  the result of the former steps"
       ]
     },
     {
@@ -233,7 +232,7 @@
         "w=temp.shape[1]\n",
         "\n",
         "#Make a copy of the original image to draw over it\n",
-        "#This is important. Assignments (A = B) in numpy arrays does not create \n",
+        "#This is important. Assignments (A = B) in numpy arrays does not create\n",
         "#a new array, but a new reference to the same allocated data\n",
         "im_draw = im.copy()\n",
         "\n",
@@ -278,11 +277,11 @@
       "source": [
         "# Template matching in multiple scales\n",
         "\n",
-        "What happens when the size of the template is different than the image because of the scale? \n",
+        "What happens when the size of the template is different than the image because of the scale?\n",
         "\n",
         "We need to search for the template in multiple scales in the image. For that, we can use image pyramids.\n",
         "\n",
-        "https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_pyramids/py_pyramids.html"
+        "* https://docs.opencv.org/4.11.0/dc/dff/tutorial_py_pyramids.html"
       ]
     },
     {
@@ -327,8 +326,8 @@
         "#The returned field is a numpy array of real values\n",
         "print(sim_map.dtype)\n",
         "\n",
-        "max_val_scales = [] \n",
-        "max_loc_scales = [] \n",
+        "max_val_scales = []\n",
+        "max_loc_scales = []\n",
         "\n",
         "plt.figure(figsize=(10,10))\n",
         "plt.imshow(sim_map)\n",
@@ -363,7 +362,7 @@
         "  cv2.rectangle(im_draw,max_loc, bottom_right, 255, 2)\n",
         "\n",
         "  #We draw a circle at the maximum location\n",
-        "  cv2.circle(im_draw,max_loc,10,255,2); \n",
+        "  cv2.circle(im_draw,max_loc,10,255,2);\n",
         "\n",
         "\n",
         "im_draw = im.copy()\n",
@@ -382,7 +381,7 @@
         "id": "ARSEHq6YiFs6"
       },
       "source": [
-        "We can use the pyrDown function in OpenCV to generate downscaled versions of the image by octaves. \n",
+        "We can use the pyrDown function in OpenCV to generate downscaled versions of the image by octaves.\n",
         "\n",
         "Please notice the scale of the axes in the figures.\n",
         "\n"
